--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.6.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "face-api.js": "^0.22.2",
+    "mongoose": "^5.9.9",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.0"
   }
